TAG: fix(djagnowf)

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,19 +1,19 @@
 name: Build & Push Docker Images
 
 on:
-  workflow_run:
-    workflows: ["Auto Tag Commits"]
-    types: [completed]
+  push:
+    tags:
+      - 'v*'     # <- fires on any tag like v0.0.2, v1.1.0, etc.
 
 jobs:
   build_and_push:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set Tag
+      - name: Set TAG env var
         run: echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
       - name: Docker Login
@@ -30,11 +30,10 @@ jobs:
 
       - name: Build & Push
         run: |
-          # explicitly tell Compose where the file is
+          # point explicitly at your compose file
           docker compose -f ./docker-compose.yml --env-file .env build
           docker tag vizarb/backend:$TAG vizarb/backend:latest
           docker tag vizarb/frontend:$TAG vizarb/frontend:latest
-
           docker push vizarb/backend:$TAG
           docker push vizarb/backend:latest
           docker push vizarb/frontend:$TAG
