--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,40 +1,64 @@
-name: Build & Push Docker Images
+name: dockers update
 
 on:
-  push:
-    tags:
-      - 'v*'     # <- fires on any tag like v0.0.2, v1.1.0, etc.
+  workflow_run:
+    workflows: ["Auto Tag Commits"]
+    types:
+      - completed
 
 jobs:
-  build_and_push:
+  build-and-push:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    name: Build and Push Docker Images
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout Code
+      uses: actions/checkout@v3
 
-      - name: Set TAG env var
-        run: echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+    - name: Fetch Latest Tag
+      id: fetch_tag
+      run: |
+        git fetch --tags
+        LATEST_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
+        echo "TAG=$LATEST_TAG" >> $GITHUB_ENV
 
-      - name: Docker Login
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Setup Buildx
-        uses: docker/setup-buildx-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      - name: Prepare .env
-        run: echo "${{ secrets.DOTENV_FILE }}" > .env
+    - name: Create .env File
+      run: |
+        echo "${{ secrets.DOTENV_FILE }}" > .env
 
-      - name: Build & Push
-        run: |
-          # point explicitly at your compose file
-          docker compose -f ./docker-compose.yml --env-file .env build
-          docker tag vizarb/backend:$TAG vizarb/backend:latest
-          docker tag vizarb/frontend:$TAG vizarb/frontend:latest
-          docker push vizarb/backend:$TAG
-          docker push vizarb/backend:latest
-          docker push vizarb/frontend:$TAG
-          docker push vizarb/frontend:latest
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/v2.22.0/docker-compose-$(uname -s)-$(uname -m)" \
+          -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+
+    - name: Build, Tag, and Push Docker Images
+      env:
+        BACKEND_TAG: ${{ env.TAG }}
+        FRONTEND_TAG: ${{ env.TAG }}
+      run: |
+        echo "Building Docker images..."
+        docker-compose --env-file .env build
+
+        echo "Tagging images with ${BACKEND_TAG} and latest..."
+        docker tag vizarb/backend:${BACKEND_TAG}  vizarb/backend:latest
+        docker tag vizarb/frontend:${FRONTEND_TAG} vizarb/frontend:latest
+
+        echo "Pushing Docker images..."
+        docker push vizarb/backend:${BACKEND_TAG}
+        docker push vizarb/backend:latest
+        docker push vizarb/frontend:${FRONTEND_TAG}
+        docker push vizarb/frontend:latest
+
+    - name: Debug Image Tags
+      run: docker images | grep vizarb
