--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -3,36 +3,42 @@ name: Build & Push Docker Images
 on:
   push:
     tags:
-      - 'v*'  # trigger on version tags
+      - 'v*'  # Only run on version tags like v1.2.3
 
 jobs:
-  build:
+  build_and_push:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set TAG from Git Ref
+      - name: Extract tag name
         run: echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
-      - name: Docker Login
+      - name: Docker login
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Setup Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Create .env file
+      - name: Create .env from secrets
         run: echo "${{ secrets.DOTENV_FILE }}" > .env
 
-      - name: Build and Push Docker Images
+      - name: Build Docker images
         run: |
-          docker compose -f docker-compose.yml --env-file .env build
-          docker tag vizarb/backend:$TAG vizarb/backend:latest
-          docker tag vizarb/frontend:$TAG vizarb/frontend:latest
+          docker compose --env-file .env build
 
+      - name: Tag Docker images
+        run: |
+          docker tag vizarb/backend:latest vizarb/backend:$TAG
+          docker tag vizarb/frontend:latest vizarb/frontend:$TAG
+
+      - name: Push Docker images
+        run: |
           docker push vizarb/backend:$TAG
           docker push vizarb/backend:latest
           docker push vizarb/frontend:$TAG
